# SmartFS

./: .gitignore  CMakeLists.txt  run_full_test  run_lru_test  run_monitor_test  run_test  run_write_test  smart_cli.py  test_compress  test_engine  test_snap_merged
src/: .main.c.swp  integration_test.c  main.c  test_dedup  test_lru.c
src/include/: smartfs_types.h  storage.h
src/src/storage/: dedup.c
src/storage/: backup.c  cache.c  compress.c  dedup.c  l3_storage.c  smart_write.c  test_module  test_module.c  wal.c
src/utils/: mkfs.c
src/versioning/: test_snapshot.c  test_version.c  version_mgr.c  version_mgr.h  version_utils.c  version_utils.h
